--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "server": "node server/index.js"
+    "socket": "node server/socket-server.js",
+    "dev:all": "npm run socket & npm run dev",
+    "test": "jest"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
@@ -40,8 +42,8 @@
     "recharts": "^3.6.0",
     "redis": "^4.6.0",
     "simple-peer": "^9.11.1",
-    "socket.io": "^4.7.0",
-    "socket.io-client": "^4.7.0",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.0",
