Complete Phase 11 - Docker, CI/CD, and deployment configuration

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,48 @@
-# Database
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/collabspace?retryWrites=true&w=majority
+# CollabSpace Environment Variables
+# Copy this file to .env.local and fill in your values
 
-# Redis
+# =================
+# DATABASE
+# =================
+MONGODB_URI=mongodb://localhost:27017/collabspace
+
+# =================
+# AUTHENTICATION
+# =================
+# Generate with: openssl rand -base64 32
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
+JWT_REFRESH_SECRET=your-refresh-secret-key-change-in-production
+
+# NextAuth Configuration
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=your-nextauth-secret-key
+
+# OAuth Providers (Optional)
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+# =================
+# REAL-TIME
+# =================
+NEXT_PUBLIC_SOCKET_URL=http://localhost:3002
+SOCKET_PORT=3002
+
+# =================
+# CACHING
+# =================
 REDIS_URL=redis://localhost:6379
 
-# NextAuth
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-secret-key-here-generate-with-openssl-rand-base64-32
+# =================
+# FILE STORAGE
+# =================
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
 
-# JWT
-JWT_SECRET=your-jwt-secret-here
-
-# Socket.io
-NEXT_PUBLIC_SOCKET_URL=http://localhost:3001
-SOCKET_PORT=3001
-
-# App
+# =================
+# APPLICATION
+# =================
+NODE_ENV=development
 NEXT_PUBLIC_APP_URL=http://localhost:3000
-
-# OAuth (Optional)
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
-
-GITHUB_CLIENT_ID=your-github-client-id
-GITHUB_CLIENT_SECRET=your-github-client-secret
-
-# File Storage (Optional)
-CLOUDINARY_CLOUD_NAME=your-cloud-name
-CLOUDINARY_API_KEY=your-api-key
-CLOUDINARY_API_SECRET=your-api-secret
