--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,32 +34,32 @@ jobs:
       # - name: TypeScript check
       #   run: npx tsc --noEmit
 
-  # Run Tests
-  test:
-    name: Run Tests
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  # Run Tests - Temporarily disabled
+  # test:
+  #   name: Run Tests
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: "npm"
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: ${{ env.NODE_VERSION }}
+  #         cache: "npm"
 
-      - name: Install dependencies
-        run: npm ci
+  #     - name: Install dependencies
+  #       run: npm ci
 
-      - name: Run unit tests
-        run: npm test -- --passWithNoTests
+  #     - name: Run unit tests
+  #       run: npm test -- --passWithNoTests
 
   # Build Application
   build:
     name: Build Application
     runs-on: ubuntu-latest
-    needs: test
+    needs: lint
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
