Implement real video meetings with Daily.co API

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,9 @@ CLOUDINARY_API_SECRET=
 # =================
 NODE_ENV=development
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# =================
+# VIDEO MEETINGS
+# =================
+# Get your API key from: https://dashboard.daily.co/developers
+DAILY_API_KEY=your-daily-api-key-here
