--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@daily-co/daily-js": "^0.85.0",
+    "@daily-co/daily-react": "^0.24.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-query": "^5.20.0",
     "@types/node": "^20.11.0",
