--- a/.env.example
+++ b/.env.example
@@ -15,13 +15,16 @@ JWT_REFRESH_SECRET=your-refresh-secret-key-change-in-production
 
 # NextAuth Configuration
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-nextauth-secret-key
+NEXTAUTH_SECRET=your-nextauth-secret-key-change-this
 
-# OAuth Providers (Optional)
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
+# OAuth Providers
+# Get Google credentials: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# Get GitHub credentials: https://github.com/settings/developers
+GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
 
 # =================
 # REAL-TIME
