--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.11.1",
     "@daily-co/daily-js": "^0.85.0",
     "@daily-co/daily-react": "^0.24.0",
     "@radix-ui/react-slot": "^1.2.4",
