Implement real-time messaging with Pusher - chat, typing indicators, presence

--- a/.env.example
+++ b/.env.example
@@ -27,10 +27,13 @@ GITHUB_CLIENT_ID=your-github-client-id
 GITHUB_CLIENT_SECRET=your-github-client-secret
 
 # =================
-# REAL-TIME
+# REAL-TIME MESSAGING (Pusher)
 # =================
-NEXT_PUBLIC_SOCKET_URL=http://localhost:3002
-SOCKET_PORT=3002
+# Get credentials from: https://dashboard.pusher.com
+PUSHER_APP_ID=your-pusher-app-id
+NEXT_PUBLIC_PUSHER_KEY=your-pusher-key
+PUSHER_SECRET=your-pusher-secret
+NEXT_PUBLIC_PUSHER_CLUSTER=ap2
 
 # =================
 # CACHING
