--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "next": "^14.2.0",
     "next-auth": "^4.24.13",
     "postcss": "^8.4.0",
+    "pusher": "^5.3.2",
+    "pusher-js": "^8.4.0",
     "quill": "^2.0.3",
     "quill-cursors": "^4.0.0",
     "react": "^18.3.0",
