--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "motion": "^12.25.0",
     "next": "^14.2.0",
     "next-auth": "^4.24.13",
+    "next-themes": "^0.4.6",
     "postcss": "^8.4.0",
     "pusher": "^5.3.2",
     "pusher-js": "^8.4.0",
